﻿drkns 31.07.2014 22:45:46 +0200 - build 4032

1. Cppcheck warnings.

drkns 31.07.2014 00:18:41 +0200 - build 4031

1. Ещё немного Clang.

drkns 30.07.2014 21:07:46 +0200 - build 4030

1. Уточнение 4018.2.

drkns 29.07.2014 21:22:25 +0200 - build 4029

1. Первая попытка компиляции в Clang. Естественно, не взлетело, но кое-что всплыло:
   - пара глупых багов в редакторе;
   - неиспользуемые переменные;
   - поиск во вьювере зачем-то пытался заменить в искомом \xffff на \0. Мало того, что сие прелэстно само по себе, так при этом ещё и падало.

2. Пара мелочей.

drkns 26.07.2014 15:29:52 +0200 - build 4028

1. Из соображений абстрактного совершенства компилим hook_wow64 как C++.

drkns 25.07.2014 23:09:46 +0200 - build 4027

1. Рефакторинг.

zg 25.07.2014 13:55:39 +0200 - build 4026

1. уточнение 4025 для ACTL_GETWINDOWTYPE.

2. уточнение 4025 для редактора.

zg 25.07.2014 12:40:09 +0200 - build 4025

1. уточнение 3981.

drkns 24.07.2014 23:19:41 +0200 - build 4024

1. При определении кодовой страницы юникод выбирается только в том случае, если текст явно не похож на ASCII.
   Должно уменьшиться количество ложных определений юникода (а количество ложных определений ASCII, соответственно, вырасти).

zg 24.07.2014 12:53:54 +0200 - build 4023

1. уточнение 4020: в горизонтальном меню не работала активация последнего пункта по shift-f10 и активация меню мышью.

zg 24.07.2014 01:40:17 +0200 - build 4022

1. уточнение 4020: не показываем список окон в горизонтальном меню и граббере.

zg 24.07.2014 00:20:25 +0200 - build 4021

1. удалён неиспользуемый код в оконном менеджере.

zg 23.07.2014 23:11:32 +0200 - build 4020

1. горизонтальное меню и граббер - честные окна.

2. при изменении размеров консоли граббер закрывается. раньше падал.

3. gcc warning.

drkns 23.07.2014 19:55:47 +0200 - build 4019

1. Размер буфера для встроенной функции копирования теперь 32 К, а не 64.

drkns 23.07.2014 03:30:09 +0200 - build 4018

1. Уточнение 3978.
