@@ -1,4 +1,8 @@
-﻿drkns 31.07.2014 22:45:46 +0200 - build 4032
+﻿drkns 01.08.2014 21:36:24 +0200 - build 4033
+
+1. 0002445: Копирование зашифрованных (EFS) файлов
+
+drkns 31.07.2014 22:45:46 +0200 - build 4032
 
 1. Cppcheck warnings.
 
